[gd_scene load_steps=4 format=2]

[ext_resource path="res://Resources/gui_theme.tres" type="Theme" id=1]
[ext_resource path="res://Menus/MenuBackground.tscn" type="PackedScene" id=2]
[ext_resource path="res://Menus/Options.gd" type="Script" id=3]

[node name="Options" type="Spatial"]
script = ExtResource( 3 )

[node name="Spatial" parent="." instance=ExtResource( 2 )]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="center" type="Control" parent="CanvasLayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="CanvasLayer/center"]
margin_left = -200.0
margin_top = -200.0
margin_right = 200.0
margin_bottom = 200.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="CanvasLayer/center/Panel"]
margin_left = 20.0
margin_top = 337.0
margin_right = 381.0
margin_bottom = 375.0
theme = ExtResource( 1 )
text = "Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="enable_shadows" type="CheckButton" parent="CanvasLayer/center/Panel"]
margin_left = 20.0
margin_top = 25.0
margin_right = 380.0
margin_bottom = 67.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Enable shadows"

[node name="fullscreen" type="CheckButton" parent="CanvasLayer/center/Panel"]
margin_left = 20.0
margin_top = 67.0
margin_right = 380.0
margin_bottom = 109.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Fullscreen"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="CanvasLayer/center/Panel/Back" to="." method="_on_Back_pressed"]
[connection signal="toggled" from="CanvasLayer/center/Panel/enable_shadows" to="." method="_on_enable_shadows_toggled"]
[connection signal="toggled" from="CanvasLayer/center/Panel/fullscreen" to="." method="_on_fullscreen_toggled"]
